[package]
categories = ["value-formatting"]
description = "A library for processing standard bibliographic numbers in Rust"
edition = "2021"
homepage = "https://github.com/pulibrary/library_stdnums"
keywords = ["issn", "isbn", "lccn"]
license = "MIT"
name = "library_stdnums"
readme = "README.md"
repository = "https://github.com/pulibrary/library_stdnums"
version = "0.1.0"

[dependencies]
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "lccn_bench"
harness = false

[lib]
bench = false
